GNU style.